# aix-future-modelinfos

./: .gitignore  HOW_TO_RUN.md  old.yaml  run.bat  test_all_pricing.db  test_eval.db  test_pricing.db  test_schema.db  test_upsert.db  test_writer_invalid.db  test_writer_models.db  test_writer_pricing.db
.github/workflows/: daily-price-check.yml  weekly-full-collect.yml
collector/: .gitignore  README.md  pyproject.toml  test_integration_full.db  test_integration_idempotent.db  test_integration_queries.db  test_writer_invalid.db  test_writer_models.db  test_writer_pricing.db
collector/logs/: errors.jsonl
collector/src/modelinfo/: __init__.py  change_log.py  cli.py  db.py  differ.py  fetcher.py  models.py  normalizer.py  validator.py  writer.py
collector/src/modelinfo/parsers/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py
collector/tests/: conftest.py  test_change_log.py  test_cli.py  test_db.py  test_differ.py  test_fetcher.py  test_integration.py  test_models.py  test_normalizer.py  test_validator.py  test_writer.py
collector/tests/fixtures/: anthropic_models_page.html  anthropic_pricing_page.html  openai_models_page.html  openai_pricing_page.html  openrouter_models.json
collector/tests/parsers/: test_anthropic.py  test_openai.py  test_openrouter.py
docs/superpowers/plans/: 2026-04-30-model-metadata-collector.md
docs/superpowers/specs/: 2026-04-30-model-metadata-collector-design.md
